# Abby

./: .gitignore  .gitmodules
client/: CMakeLists.txt
client/include/: AbbyClient.hpp  abby_client.h
client/src/: AbbyClient.cpp
connector/: BLE_COMMANDS.md  CMakeLists.txt
connector/config/: catalog.json
connector/include/: BleServer.hpp  ContentCatalog.hpp  PlaylistManager.hpp
connector/scripts/: bt-agent.service  bt_agent.py
connector/src/: BleServer.cpp  ContentCatalog.cpp  PlaylistManager.cpp  main.cpp
crypt/: CMakeLists.txt
crypt/include/: HardwareID.hpp
crypt/src/: CryptoEngine.cpp
device/AbbyConnector/config/: catalog.json
device/AbbyConnector/include/: JwtValidator.hpp
device/AbbyConnector/keys/: public.pem
device/AbbyConnector/src/: JwtValidator.cpp  main.cpp
device/AbbyCrypt/include/: AbbyCrypt.hpp  CryptoEngine.hpp  FileHandler.hpp
device/AbbyCrypt/src/: AbbyCrypt.cpp  CryptoEngine.cpp  FileHandler.cpp  HardwareID.cpp
device/AbbyPlayer/: CMakeLists.txt
device/AbbyPlayer/shaders/: bars.frag  circular_eq.frag  city.frag  dna.frag  glitch.frag  heartbeat.frag  hypnotic.frag  plasma.frag  radar.frag  ripple.frag  simple_sine.frag  tunnel.frag  waveform.frag
device/AbbyPlayer/src/: AudioPlayer.cpp  AudioPlayer.hpp  FrequencyAnalyzer.cpp  FrequencyAnalyzer.hpp  ResourceManager.cpp  ResourceManager.hpp  ShaderVisualizer.cpp  ShaderVisualizer.hpp  main.cpp  main.cpp.bak  main.cpp.bak2
device/audio/: hello.pira
gui/: CMakeLists.txt  abby-gui-fltk.cpp  abby-gui.cpp
libs/abby-client/include/: AbbyClient.hpp
libs/abby-client/src/: AbbyClient.cpp
player/: CMakeLists.txt
player/shaders/: 00_spectrum.frag  circle_bars.frag  fire.frag  fluid.frag  hexgrid.frag  kaleidoscope.frag  matrix_rain.frag  oscilloscope.frag  snow.frag  starfield.frag  sunset.frag  voronoi.frag
player/src/: AudioPlayer.cpp  AudioPlayer.hpp  AudioPlayer_callbacks.cpp  encrypt_util.cpp
scripts/: deploy_device.sh  generate_catalog.py  setup.sh  setup_pirate_audio.sh  status.sh
tools/abby-gui/: abby-gui-fltk.cpp
tools/device-key/: CMakeLists.txt  device-key.cpp
